--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center justify-content-lg-between">
-
-            <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
-
+            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>Jmekerie.tech</span></a></h1>
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
@@ -59,7 +57,7 @@
 
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
                 <div class="col-xl-6 col-lg-8">
-                    <h1>Jmekerie tech<span>.</span></h1>
+                    <h1>Jmekerie<span>.</span>tech</h1>
                     <h2>Suntem o echipa de web development foarte devotata</h2>
                 </div>
             </div>
@@ -67,31 +65,31 @@
             <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
-                        <i class="ri-store-line"></i>
+                        <i class="bi-credit-card-2-back"></i>
                         <h3>Creare site-uri</h3>
                     </div>
                 </div>
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
-                        <i class="ri-bar-chart-box-line"></i>
+                        <i class="bi-hdd-rack"></i>
                         <h3>Administrare site-uri</h3>
                     </div>
                 </div>
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
-                        <i class="ri-calendar-todo-line"></i>
+                        <i class="ri-admin-line"></i>
                         <h3>Securitate web</h3>
                     </div>
                 </div>
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
-                        <i class="ri-paint-brush-line"></i>
+                        <i class="ri-apps-2-line"></i>
                         <h3>Creare aplicatii</h3>
                     </div>
                 </div>
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
-                        <i class="ri-database-2-line"></i>
+                        <i class="bi-hdd-network"></i>
                         <h3>Administrare aplicatii</h3>
                     </div>
                 </div>
@@ -147,47 +145,49 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="50">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                            <h4><a href="">Lorem Ipsum</a></h4>
-                            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                            <h4><a href="">Creare site-uri</a></h4>
+                            <p>Cream site-uri dupa dorintele si placul clientilor</p>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-file"></i></div>
-                            <h4><a href="">Sed ut perspiciatis</a></h4>
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                            <h4><a href="">Administrare site-uri</a></h4>
+                            <p>Administram site-uri la cererea clientului</p>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-tachometer"></i></div>
-                            <h4><a href="">Magni Dolores</a></h4>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                            <h4>
+                                <a href="">Securitate web</a>
+                            </h4>
+                            <p>Toate site-urile facute de noi vor fi securizate</p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="50">
+                        <div class="icon-box">
+                            <div class="icon"><i class="bx bx-world"></i></div>
+                            <h4><a href="">Creare aplicatii</a></h4>
+                            <p>In viitorul apropiat vom crea si diferite aplicatii</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bx-world"></i></div>
-                            <h4><a href="">Nemo Enim</a></h4>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-                        <div class="icon-box">
                             <div class="icon"><i class="bx bx-slideshow"></i></div>
-                            <h4><a href="">Dele cardo</a></h4>
-                            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                            <h4><a href="">Administrare aplicatii</a></h4>
+                            <p>In curand vom fi dispusi sa administram si sa intretinem aplicatiile dumneavoastra</p>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="150">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-arch"></i></div>
                             <h4><a href="">Divera don</a></h4>
@@ -221,8 +221,8 @@
                 </div>
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <!--
+                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -234,16 +234,16 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
+                </div>
+                -->
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/logoOPO.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Web 3</h4>
-                                <p>Web</p>
+                                <h4>Oameni pentru oameni</h4>
+                                <p>Site web</p>
                                 <div class="portfolio-links">
-                                    <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                                    <a href="assets/img/portfolio/logoOPO.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="oamenipentruoameni.com"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -252,18 +252,32 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/comingsoon.png" class="img-fluid" alt="">
+                            <div class="portfolio-info">
+                                <h4>Prima aplicatie</h4>
+                                <p>Curand va aparea noua noastra aplicatie</p>
+                                <div class="portfolio-links">
+                                    <a href="assets/img/portfolio/comingsoon.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="COMING SOON"><i class="bx bx-plus"></i></a>
+                                    <a href="" title="More Details"><i class="bx bx-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                        <div class="portfolio-wrap">
+                            <img src="assets/img/portfolio/titlelogo.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Web 2</h4>
                                 <p>Web</p>
                                 <div class="portfolio-links">
-                                    <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="assets/img/portfolio/titlelogo.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="jmekerie.tech"><i class="bx bx-plus"></i></a>
+                                    <a href="" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-
+                    <!--
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
@@ -277,21 +291,8 @@
                             </div>
                         </div>
                     </div>
+                -->
 
-
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                            <div class="portfolio-info">
-                                <h4>Web 3</h4>
-                                <p>Web</p>
-                                <div class="portfolio-links">
-                                    <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
                 </div>
 
@@ -354,7 +355,7 @@
                             <div class="member-img ">
                                 <img src="assets/img/team/marcus.png " class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href="" target="_blank"><i class="bi bi-twitter "></i></a>
+                                    <a href="https://twitter.com/PreafericitulM" target="_blank"><i class="bi bi-twitter "></i></a>
                                     <a href="https://www.facebook.com/red8red" target="_blank"><i class="bi bi-facebook "></i></a>
                                     <a href="https://www.instagram.com/preafericitul_marcus/" target="_blank"><i class="bi bi-instagram "></i></a>
                                     <a href="https://www.linkedin.com/in/marcus-coman-b216b3207/" target="_blank"><i class="bi bi-linkedin "></i></a>
@@ -404,11 +405,11 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch ">
-                        <div class="member " data-aos="fade-up " data-aos-delay="400 ">
+                        <div class="memBber " data-aos="fade-up " data-aos-delay="400 ">
                             <div class="member-img ">
                                 <img src="assets/img/team/mihai.jpg " class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href="" target="_blank"><i class="bi bi-twitter "></i></a>
+                                    <a href="https://twitter.com/ApopiMihai" target="_blank"><i class="bi bi-twitter "></i></a>
                                     <a href="https://www.facebook.com/mihai1755/" target="_blank"><i class="bi bi-facebook "></i></a>
                                     <a href="https://www.instagram.com/mihai.17/ " target="_blank"><i class="bi bi-instagram "></i></a>
                                     <a href="https://www.linkedin.com/in/mihai-apopi-998889208/" target="_blank"><i class="bi bi-linkedin "></i></a>
