--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script src="https://kit.fontawesome.com/8d948705d7.js" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -405,7 +406,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-6 d-flex align-items-stretch ">
-                        <div class="memBber " data-aos="fade-up " data-aos-delay="400 ">
+                        <div class="member " data-aos="fade-up " data-aos-delay="400 ">
                             <div class="member-img ">
                                 <img src="assets/img/team/mihai.jpg " class="img-fluid " alt=" ">
                                 <div class="social ">
@@ -504,7 +505,7 @@
     </main>
     <!-- End #main -->
     <!--Footer-->
-    <footer id="barajos">
+    <footer style="background-color: darkgray; padding-top: 15px; text-align: center;">
         <div class="container">
             <div class="row">
                 <div class="col-md-4"><span class="copyright">Copyright&nbsp;© Jmekerie 2021</span></div>
