commit on 'main'

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
                 <div class="col-xl-6 col-lg-8">
                     <h1>Jmekerie<span>.</span>tech</h1>
-                    <h2>Suntem o echipa de web development foarte devotata</h2>
+                    <h2>Suntem o echipa de web development foarte devotată</h2>
                 </div>
             </div>
 
@@ -85,13 +85,13 @@
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
                         <i class="ri-apps-2-line"></i>
-                        <h3>Creare aplicatii</h3>
+                        <h3>Creare aplicații</h3>
                     </div>
                 </div>
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
                         <i class="bi-hdd-network"></i>
-                        <h3>Administrare aplicatii</h3>
+                        <h3>Administrare aplicații</h3>
                     </div>
                 </div>
             </div>
@@ -113,12 +113,12 @@
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
                         <h3>Mai multe despre noi:</h3>
                         <p class="fst-italic">
-                            Suntem o echipa formata din 4 elevi la profilul de matematica-inforamtica.
+                            Suntem o echipă formată din 4 elevi la profilul de matematică-inforamtică.
                         </p>
                         <ul>
-                            <li><i class="ri-check-double-line"></i>Ideea de jmekerie tech a inceput in decembrie 2020, dupa ce n-am dat seama ca web developing-ul este ceea ce vrem sa urmam</li>
-                            <li><i class="ri-check-double-line"></i>In ianuarie 2021 am inceput crearea propriului site.</li>
-                            <li><i class="ri-check-double-line"></i>Suntem o echipa dornica de a ajuta orice persoana fizica sau firma care isi doreste un site. </li>
+                            <li><i class="ri-check-double-line"></i>Ideea de jmekerie tech a inceput in decembrie 2020, dupa ce n-am dat seama că web development-ul este ceea ce vrem sa urmăm</li>
+                            <li><i class="ri-check-double-line"></i>În ianuarie 2021 am început crearea propriului site.</li>
+                            <li><i class="ri-check-double-line"></i>Suntem o echipă dornică de a ajuta orice persoană fizică sau firmă care își dorește un site. </li>
                         </ul>
                         <p>
                             Asteptam comenzile dumneavoastra!
