--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <li><i class="ri-check-double-line"></i>Suntem o echipă dornică de a ajuta orice persoană fizică sau firmă care își dorește un site. </li>
                         </ul>
                         <p>
-                            Asteptam comenzile dumneavoastra!
+                            Asteptam comenzile dumneavoastră!
                         </p>
                     </div>
                 </div>
