--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>Jmekerie.tech</span></a></h1>
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                    <li>
+                        <a class="nav-link scrollto active" href="#hero">Acasa</a>
+                    </li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
                     <li><a class="nav-link scrollto" href="#services">Services</a></li>
                     <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
