--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li>
-                        <a class="nav-link scrollto active" href="#hero">Acasa</a>
+                        <a class="nav-link scrollto active" href="#hero">Home</a>
                     </li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
                     <li><a class="nav-link scrollto" href="#services">Services</a></li>
