--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             </div>
                             <div class="member-info ">
                                 <h4>Coman Marcus</h4>
-                                <span>Web designer</span>
+                                <span>Back-end developer(AI enthusiast)</span>
                             </div>
                         </div>
                     </div>
@@ -376,7 +376,7 @@
                             <div class="member-img ">
                                 <img src="assets/img/team/cosmasrs.jpg " class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href=" " target="_blank"><i class="bi bi-twitter "></i></a>
+                                    <a href="https://twitter.com/Andrei_Cosma1" target="_blank"><i class="bi bi-twitter "></i></a>
                                     <a href="https://www.facebook.com/andrei.cosma.7773/" target="_blank"><i class="bi bi-facebook "></i></a>
                                     <a href="https://www.instagram.com/cosma_an/" target="_blank"><i class="bi bi-instagram "></i></a>
                                     <a href="https://www.linkedin.com/in/andrei-cosma-b185ab1a1/" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -402,7 +402,7 @@
                             </div>
                             <div class="member-info ">
                                 <h4>Strugari Cristian</h4>
-                                <span>Front-end developer</span>
+                                <span>Full-stack developer</span>
                             </div>
                         </div>
                     </div>
@@ -420,7 +420,7 @@
                             </div>
                             <div class="member-info ">
                                 <h4>Apopi Mihai</h4>
-                                <span>Web designer</span>
+                                <span>Front-end developer</span>
                             </div>
                         </div>
                     </div>
