--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li>
-                        <a class="nav-link scrollto active" href="#hero">Home</a>
+                        <a class="nav-link scrollto active" href="#hero">Acasă</a>
                     </li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li>
-                    <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
+                    <li><a class="nav-link scrollto" href="#about">Despre</a></li>
+                    <li><a class="nav-link scrollto" href="#services">Servicii</a></li>
+                    <li><a class="nav-link scrollto " href="#portfolio">Portfoliu</a></li>
+                    <li><a class="nav-link scrollto" href="#team">Echipă</a></li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -61,7 +61,7 @@
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
                 <div class="col-xl-6 col-lg-8">
                     <h1>Jmekerie<span>.</span>tech</h1>
-                    <h2>Suntem o echipa de web development foarte devotată</h2>
+                    <h2>Suntem o echipă de web development foarte devotată</h2>
                 </div>
             </div>
 
@@ -81,7 +81,7 @@
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
                         <i class="ri-admin-line"></i>
-                        <h3>Securitate web</h3>
+                        <h3>Utilizare Inteligență artificială</h3>
                     </div>
                 </div>
                 <div class="col-xl-2 col-md-4">
@@ -115,16 +115,29 @@
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
                         <h3>Mai multe despre noi:</h3>
                         <p class="fst-italic">
-                            Suntem o echipă formată din 4 elevi la profilul de matematică-inforamtică.
+                            Cum a pornit totul?
                         </p>
                         <ul>
-                            <li><i class="ri-check-double-line"></i>Ideea de jmekerie tech a inceput in decembrie 2020, dupa ce n-am dat seama că web development-ul este ceea ce vrem sa urmăm</li>
-                            <li><i class="ri-check-double-line"></i>În ianuarie 2021 am început crearea propriului site.</li>
-                            <li><i class="ri-check-double-line"></i>Suntem o echipă dornică de a ajuta orice persoană fizică sau firmă care își dorește un site. </li>
+                            <li><i class="ri-check-double-line"></i>Totul a pornit din momentul în care am intrat la liceu, la un profil matematică-informatică, unde am ajuns să dobândim pasiunea pentru programare.</li>
                         </ul>
-                        <p>
-                            Asteptam comenzile dumneavoastră!
+                        <p class="fst-italic">
+                            Ideea jmekerie.tech
                         </p>
+                        <ul>
+                            <li><i class="ri-check-double-line"></i>După un an de muncă continuă și documentare ne-am decis să formăm o echipă și să lucrăm împreună la diverse proiecte, ajutând oamenii care au nevoie de serviciile noastre.</li>
+                        </ul>
+                        <p class="fst-italic">
+                            Creearea site-ului
+                        </p>
+                        <ul>
+                            <li><i class="ri-check-double-line"></i>În această perioadă ne-am construit propriul nostru site jmekerie.tech pe care să ne prezentăm serviciile și viitoarele proiecte realizate, acumulând cât mai multă experiență.</li>
+                        </ul>
+                        <p class="fst-italic">
+                            Dăm start proiectului
+                        </p>
+                        <ul>
+                            <li><i class="ri-check-double-line"></i>Așteptăm orice propunere de colaborare de la persoane fizice sau firme, care își doresc să fie ajutați de catre echipa noastră! Promitem lucruri jmekere!</li>
+                        </ul>
                     </div>
                 </div>
 
@@ -143,58 +156,56 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>Services</h2>
-                    <p>Check our Services</p>
+                    <h2>Servicii</h2>
+                    <p>Acestea sunt serviciile pe care le oferim:</p>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="50">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                            <h4><a href="">Creare site-uri</a></h4>
-                            <p>Cream site-uri dupa dorintele si placul clientilor</p>
+                            <h4>Creare site-uri</h4>
+                            <p>Creăm pagini web, cu profesionalism pentru firme sau persoane fizice.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-file"></i></div>
-                            <h4><a href="">Administrare site-uri</a></h4>
-                            <p>Administram site-uri la cererea clientului</p>
+                            <h4>Asigurăm securitatea</h4>
+                            <p>Toate site-urile făcute și administrate de noi vor fi securizate.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-tachometer"></i></div>
-                            <h4>
-                                <a href="">Securitate web</a>
-                            </h4>
-                            <p>Toate site-urile facute de noi vor fi securizate</p>
+                            <h4>Creare aplicatii</h4>
+                            <p>Momentan creăm aplicații desktop pentru clienții noștri, pe viitor dorim să ajutăm și creând aplicații mobile.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="50">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-world"></i></div>
-                            <h4><a href="">Creare aplicatii</a></h4>
-                            <p>In viitorul apropiat vom crea si diferite aplicatii</p>
+                            <h4>Administrare site-uri</h4>
+                            <p>Administrăm orice fel de site existent, utilizându-ne experiența.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-slideshow"></i></div>
-                            <h4><a href="">Administrare aplicatii</a></h4>
-                            <p>In curand vom fi dispusi sa administram si sa intretinem aplicatiile dumneavoastra</p>
+                            <h4>Utilizare inteligență artificială</h4>
+                            <p>Putem utiliza inteligența artificială în aplicația sau site-ul dumneavoastră.</p>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="150">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bx-arch"></i></div>
-                            <h4><a href="">Divera don</a></h4>
-                            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+                            <h4>Administrare aplicatii</h4>
+                            <p>Vă putem administra și înreține aplicațiile dumneavoastră desktop, în curând și cele mobile.</p>
                         </div>
                     </div>
 
@@ -210,15 +221,15 @@
 
                 <div class="section-title">
                     <h2>Portfoliu</h2>
-                    <p>Urmariti proiectele noastre</p>
+                    <p>Urmăriți-ne proiectele</p>
                 </div>
 
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-flters">
-                            <li data-filter="*" class="filter-active">All</li>
-                            <li data-filter=".filter-app">App</li>
-                            <li data-filter=".filter-web">Web</li>
+                            <li data-filter="*" class="filter-active">Toate</li>
+                            <li data-filter=".filter-app">Aplicații</li>
+                            <li data-filter=".filter-web">Website-uri</li>
                         </ul>
                     </div>
                 </div>
@@ -303,52 +314,13 @@
         </section>
         <!-- End Portfolio Section -->
 
-        <!-- ======= Counts Section ======= -->
-        <section id="counts" class="counts">
-            <div class="container" data-aos="fade-up">
-
-                <div class="row no-gutters">
-                    <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start" data-aos="fade-right" data-aos-delay="100"></div>
-                    <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch" data-aos="fade-left" data-aos-delay="100">
-                        <div class="content d-flex flex-column justify-content-center">
-                            <h3>Suntem o echipa devotata</h3>
-                            <p>
-                                De-a lungul timpului ne-am straduit sa facem cat de multe proiecte de calitate.
-                            </p>
-                            <div class="row">
-                                <div class="col-md-6 d-md-flex align-items-md-stretch">
-                                    <div class="count-box">
-                                        <i style="padding-top: 15px;" class="bi bi-emoji-smile"></i>
-                                        <p><strong>Clienti fericiti. </strong></p>
-                                        <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="2" class="purecounter"></span>
-                                    </div>
-                                </div>
-
-                                <div class="col-md-6 d-md-flex align-items-md-stretch">
-                                    <div class="count-box">
-                                        <i style="padding-top: 15px;" class=" bi bi-journal-richtext "></i>
-                                        <p><strong>Proiecte realizate</strong>
-                                        </p>
-                                        <span data-purecounter-start=" 0 " data-purecounter-end=" 2 " data-purecounter-duration="2 " class="purecounter "></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End .content-->
-                    </div>
-                </div>
-
-            </div>
-        </section>
-        <!-- End Counts Section -->
-
         <!-- ======= Team Section ======= -->
         <section id="team" class="team">
             <div class="container " data-aos="fade-up ">
 
                 <div class="section-title ">
-                    <h2>Team</h2>
-                    <p>Check our Team</p>
+                    <h2>Echipă</h2>
+                    <p>Aceasta este echipa noastră:</p>
                 </div>
 
                 <div class="row ">
@@ -436,7 +408,7 @@
 
                 <div class="section-title ">
                     <h2>Contact</h2>
-                    <p>Contact Us</p>
+                    <p>Contacți-ne</p>
                 </div>
 
                 <div>
@@ -450,7 +422,7 @@
                         <div class="info ">
                             <div class="address ">
                                 <i class="bi bi-geo-alt "></i>
-                                <h4>Location:</h4>
+                                <h4>Locație:</h4>
                                 <p>In Viisoara, aproape de Dedeman</p>
                             </div>
 
@@ -462,7 +434,7 @@
 
                             <div class="phone ">
                                 <i class="bi bi-phone "></i>
-                                <h4>Call:</h4>
+                                <h4>Telefon:</h4>
                                 <p>+40748782104</p>
                             </div>
 
