--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
@@ -34,7 +35,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center justify-content-lg-between">
-            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>Jmekerie.tech</span></a></h1>
+            <h1 class=" me-auto me-lg-0"><a href="index.html"><span style="font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive;">Jmekerie.tech</span></a></h1>
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li>
@@ -423,7 +424,7 @@
                             <div class="address ">
                                 <i class="bi bi-geo-alt "></i>
                                 <h4>Locație:</h4>
-                                <p>In Viisoara, aproape de Dedeman</p>
+                                <p>Bistrița, România</p>
                             </div>
 
                             <div class="email ">
@@ -447,24 +448,25 @@
                         <form action="forms/contact.php " method="post " role="form " class="php-email-form ">
                             <div class="row ">
                                 <div class="col-md-6 form-group ">
-                                    <input type="text " name="name " class="form-control " id="name " placeholder="Your Name " required>
+                                    <input type="text " name="name " class="form-control " id="name " placeholder="Numele dumneavoastră " required>
                                 </div>
                                 <div class="col-md-6 form-group mt-3 mt-md-0 ">
-                                    <input type="email " class="form-control " name="email " id="email " placeholder="Your Email " required>
+                                    <input type="email " class="form-control " name="email " id="email " placeholder="Email-ul dumneavoastră " required>
                                 </div>
                             </div>
                             <div class="form-group mt-3 ">
-                                <input type="text " class="form-control " name="subject " id="subject " placeholder="Subject " required>
+                                <input type="text " class="form-control " name="subject " id="subject " placeholder="Subiect " required>
                             </div>
                             <div class="form-group mt-3 ">
-                                <textarea class="form-control " name="message " rows="5 " placeholder="Message " required></textarea>
+                                <textarea class="form-control " name="message " rows="5 " placeholder="Mesaj " required></textarea>
                             </div>
                             <div class="my-3 ">
-                                <div class="loading ">Loading</div>
+                                <div class="loading ">Se încarcă</div>
                                 <div class="error-message "></div>
-                                <div class="sent-message ">Your message has been sent. Thank you!</div>
+                                <div class="sent-message ">Mesajul tău a fost trimis. Mulțumim!</div>
                             </div>
-                            <div class="text-center "><button type="submit ">Send Message</button></div>
+                            <div class="text-center "><button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Trimitere mesaj</button></div>
+
                         </form>
 
                     </div>
