--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
-                        <i class="bi-credit-card-2-back"></i>
+                        <i class="bx bx-code-block"></i>
                         <h3>Creare site-uri</h3>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col-xl-2 col-md-4">
                     <div class="icon-box">
-                        <i class="ri-admin-line"></i>
+                        <i class="bx bxl-stack-overflow"></i>
                         <h3>Utilizare Inteligență artificială</h3>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="50">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                            <div class="icon"><i class="bx bx-globe"></i></div>
                             <h4>Creare site-uri</h4>
                             <p>Creăm pagini web, cu profesionalism pentru firme sau persoane fizice.</p>
                         </div>
@@ -172,7 +172,7 @@
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bx-file"></i></div>
+                            <div class="icon"><i class="bx bx-shield-quarter"></i></div>
                             <h4>Asigurăm securitatea</h4>
                             <p>Toate site-urile făcute și administrate de noi vor fi securizate.</p>
                         </div>
@@ -180,7 +180,7 @@
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bx-tachometer"></i></div>
+                            <div class="icon"><i class="bx bx-desktop"></i></div>
                             <h4>Creare aplicatii</h4>
                             <p>Momentan creăm aplicații desktop pentru clienții noștri, pe viitor dorim să ajutăm și creând aplicații mobile.</p>
                         </div>
@@ -188,7 +188,7 @@
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="50">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bx-world"></i></div>
+                            <div class="icon"><i class="bx bx-coin-stack"></i></div>
                             <h4>Administrare site-uri</h4>
                             <p>Administrăm orice fel de site existent, utilizându-ne experiența.</p>
                         </div>
@@ -196,7 +196,7 @@
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bx-slideshow"></i></div>
+                            <div class="icon"><i class="bx bx-bot"></i></div>
                             <h4>Utilizare inteligență artificială</h4>
                             <p>Putem utiliza inteligența artificială în aplicația sau site-ul dumneavoastră.</p>
                         </div>
@@ -204,7 +204,7 @@
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="150">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bx-arch"></i></div>
+                            <div class="icon"><i class="bx bx-server"></i></div>
                             <h4>Administrare aplicatii</h4>
                             <p>Vă putem administra și înreține aplicațiile dumneavoastră desktop, în curând și cele mobile.</p>
                         </div>
@@ -411,12 +411,6 @@
                     <h2>Contact</h2>
                     <p>Contacți-ne</p>
                 </div>
-
-                <div>
-                    <iframe style="border:0; width: 100%; height: 270px; " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2714.5938669896127!2d24.470649615538424!3d47.126630229003325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4749f6f068958beb%3A0x5670fdd7bef25238!2sDedeman!5e0!3m2!1sro!2sro!4v1620398334820!5m2!1sro!2sro"
-                        frameborder="0 " allowfullscreen></iframe>
-                </div>
-
                 <div class="row mt-5 ">
 
                     <div class="col-lg-4 ">
@@ -480,7 +474,7 @@
     </main>
     <!-- End #main -->
     <!--Footer-->
-    <footer style="background-color: darkgray; padding-top: 15px; text-align: center;">
+    <footer style="background-color: rgb(29, 29, 29); padding-top: 15px; text-align: center;">
         <div class="container">
             <div class="row">
                 <div class="col-md-4"><span class="copyright">Copyright&nbsp;© Jmekerie 2021</span></div>
