--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
                             <img src="assets/img/portfolio/logoOPO.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Oameni pentru oameni</h4>
-                                <p>Site web</p>
+                                <p>Website</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/logoOPO.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="oamenipentruoameni.com"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="oposite.html" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -283,11 +283,11 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/titlelogo.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Web 2</h4>
-                                <p>Web</p>
+                                <h4>Jmekerie.tech</h4>
+                                <p>Website</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/titlelogo.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="jmekerie.tech"><i class="bx bx-plus"></i></a>
-                                    <a href="" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="jmekeriesite.html" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
