--- a/jmekeriesite.html
+++ b/jmekeriesite.html
@@ -48,10 +48,10 @@
 
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
-                    <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li>
-                    <li><a class="nav-link scrollto active" href="#portfolio">Portfolio</a></li>
+                    <li><a class="nav-link scrollto " href="#hero">Acasa</a></li>
+                    <li><a class="nav-link scrollto" href="#about">Despre</a></li>
+                    <li><a class="nav-link scrollto" href="#services">Servicii</a></li>
+                    <li><a class="nav-link scrollto active" href="#portfolio">Porofoliu</a></li>
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                 </ul>
