--- a/jmekeriesite.html
+++ b/jmekeriesite.html
@@ -91,11 +91,14 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/jmekerie1.JPG" alt="">
+                                    <img src="assets/img/portfolio/jmekerie1.PNG" alt="">
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/jmekerie2.JPG" alt="">
+                                    <img src="assets/img/portfolio/jmekerie2.PNG" alt="">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img src="assets/img/portfolio/jmekerie3.PNG" alt="">
                                 </div>
 
                             </div>
