--- a/oposite.html
+++ b/oposite.html
@@ -14,6 +14,7 @@
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
@@ -42,17 +43,16 @@
     <header id="header" class="fixed-top header-inner-pages">
         <div class="container d-flex align-items-center justify-content-lg-between">
 
-            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>Jmekerie.tech</span></a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
+            <h1 class=" me-auto me-lg-0"><a href="index.html"><span style="font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive;">Jmekerie.tech</span></a></h1>
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
-                    <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li>
-                    <li><a class="nav-link scrollto active" href="#portfolio">Portfolio</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
+                    <li>
+                        <a class="nav-link scrollto active" href="#hero">Acasă</a>
+                    </li>
+                    <li><a class="nav-link scrollto" href="#about">Despre</a></li>
+                    <li><a class="nav-link scrollto" href="#services">Servicii</a></li>
+                    <li><a class="nav-link scrollto " href="#portfolio">Portfoliu</a></li>
+                    <li><a class="nav-link scrollto" href="#team">Echipă</a></li>
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
