--- a/jmekeriesite.html
+++ b/jmekeriesite.html
@@ -112,7 +112,7 @@
                             <ul>
                                 <li><strong>Categorie</strong>: Web design and development</li>
                                 <li><strong>Data lansării</strong>: 1 martie 2021</li>
-                                <li><strong>URL-ul proiectului</strong>: <a href="https://www.oamenipentruoameni.com/index.html" target="_blank">www.oamenipentruoameni.com</a></li>
+                                <li><strong>URL-ul proiectului</strong>: <a href="https://1cosma1.github.io/jmekerie.tech/" target="_blank">1cosma1.github.io/jmekerie.tech/</a></li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
