--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
                             </div>
                             <div class="my-3 ">
                                 <div class="loading ">Se încarcă</div>
+                                <div class="error-message "></div>
                                 <div class="sent-message ">Mesajul tău a fost trimis. Mulțumim!</div>
                             </div>
                             <div class="text-center "><button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Trimitere mesaj</button></div>
