--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
         <!-- ======= Team Section ======= -->
         <section id="team" class="team">
-            <div class="container " data-aos="fade-up ">
+            <div class="container" data-aos="fade-up ">
 
                 <div class="section-title ">
                     <h2>Echipă</h2>
@@ -322,16 +322,32 @@
                 </div>
 
                 <div class="row ">
-
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch ">
+                    <div class=" col-lg-3 col-md-auto align-items-stretch ">
+                        <div class="member " data-aos="fade-up " data-aos-delay="400 ">
+                            <div class="member-img ">
+                                <img src="assets/img/team/mihai.jpg " class="img-fluid " alt=" ">
+                                <div class="social ">
+                                    <a href="https://twitter.com/ApopiMihai " target="_blank "><i class="bi bi-twitter "></i></a>
+                                    <a href="https://www.facebook.com/mihai1755/ " target="_blank "><i class="bi bi-facebook "></i></a>
+                                    <a href="https://www.instagram.com/mihai.17/ " target="_blank "><i class="bi bi-instagram "></i></a>
+                                    <a href="https://www.linkedin.com/in/mihai-apopi-998889208/ " target="_blank "><i class="bi bi-linkedin "></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info ">
+                                <h4>Apopi Mihai</h4>
+                                <span>Front-end developer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class=" col-lg-3 ">
                         <div class="member " data-aos="fade-up " data-aos-delay="100 ">
                             <div class="member-img ">
                                 <img src="assets/img/team/marcus.png " class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href="https://twitter.com/PreafericitulM" target="_blank"><i class="bi bi-twitter "></i></a>
-                                    <a href="https://www.facebook.com/red8red" target="_blank"><i class="bi bi-facebook "></i></a>
-                                    <a href="https://www.instagram.com/preafericitul_marcus/" target="_blank"><i class="bi bi-instagram "></i></a>
-                                    <a href="https://www.linkedin.com/in/marcus-coman-b216b3207/" target="_blank"><i class="bi bi-linkedin "></i></a>
+                                    <a href="https://twitter.com/PreafericitulM " target="_blank "><i class="bi bi-twitter "></i></a>
+                                    <a href="https://www.facebook.com/red8red " target="_blank "><i class="bi bi-facebook "></i></a>
+                                    <a href="https://www.instagram.com/preafericitul_marcus/ " target="_blank "><i class="bi bi-instagram "></i></a>
+                                    <a href="https://www.linkedin.com/in/marcus-coman-b216b3207/ " target="_blank "><i class="bi bi-linkedin "></i></a>
                                 </div>
                             </div>
                             <div class="member-info ">
@@ -341,15 +357,15 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch ">
+                    <div class="col-lg-3 ">
                         <div class="member " data-aos="fade-up " data-aos-delay="200 ">
                             <div class="member-img ">
                                 <img src="assets/img/team/cosmasrs.jpg " class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href="https://twitter.com/Andrei_Cosma1" target="_blank"><i class="bi bi-twitter "></i></a>
-                                    <a href="https://www.facebook.com/andrei.cosma.7773/" target="_blank"><i class="bi bi-facebook "></i></a>
-                                    <a href="https://www.instagram.com/cosma_an/" target="_blank"><i class="bi bi-instagram "></i></a>
-                                    <a href="https://www.linkedin.com/in/andrei-cosma-b185ab1a1/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                                    <a href="https://twitter.com/Andrei_Cosma1 " target="_blank "><i class="bi bi-twitter "></i></a>
+                                    <a href="https://www.facebook.com/andrei.cosma.7773/ " target="_blank "><i class="bi bi-facebook "></i></a>
+                                    <a href="https://www.instagram.com/cosma_an/ " target="_blank "><i class="bi bi-instagram "></i></a>
+                                    <a href="https://www.linkedin.com/in/andrei-cosma-b185ab1a1/ " target="_blank "><i class="bi bi-linkedin "></i></a>
                                 </div>
                             </div>
                             <div class="member-info ">
@@ -359,14 +375,14 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch ">
+                    <div class="col-lg-3 ">
                         <div class="member " data-aos="fade-up " data-aos-delay="300 ">
                             <div class="member-img ">
                                 <img src="assets/img/team/cristi.jpg " class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href="https://www.facebook.com/cristi.strugari.1" target="_blank"><i class="bi bi-facebook "></i></a>
-                                    <a href=" https://www.instagram.com/cristi_silviu04/" target="_blank"><i class="bi bi-instagram "></i></a>
-                                    <a href=" https://www.linkedin.com/in/cristian-silviu-130b841a9/" target="_blank"><i class="bi bi-linkedin "></i></a>
+                                    <a href="https://www.facebook.com/cristi.strugari.1 " target="_blank "><i class="bi bi-facebook "></i></a>
+                                    <a href=" https://www.instagram.com/cristi_silviu04/ " target="_blank "><i class="bi bi-instagram "></i></a>
+                                    <a href=" https://www.linkedin.com/in/cristian-silviu-130b841a9/ " target="_blank "><i class="bi bi-linkedin "></i></a>
                                 </div>
                             </div>
                             <div class="member-info ">
@@ -376,32 +392,29 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 d-flex align-items-stretch ">
+                    <div class="col-lg-3 col-md-auto align-items-stretch ">
                         <div class="member " data-aos="fade-up " data-aos-delay="400 ">
                             <div class="member-img ">
-                                <img src="assets/img/team/mihai.jpg " class="img-fluid " alt=" ">
+                                <img src="assets/img/team/boro.jpg" class="img-fluid " alt=" ">
                                 <div class="social ">
-                                    <a href="https://twitter.com/ApopiMihai" target="_blank"><i class="bi bi-twitter "></i></a>
-                                    <a href="https://www.facebook.com/mihai1755/" target="_blank"><i class="bi bi-facebook "></i></a>
-                                    <a href="https://www.instagram.com/mihai.17/ " target="_blank"><i class="bi bi-instagram "></i></a>
-                                    <a href="https://www.linkedin.com/in/mihai-apopi-998889208/" target="_blank"><i class="bi bi-linkedin "></i></a>
+                                    <a href="https://twitter.com/BorodiRazvan/" target="_blank "><i class="bi bi-twitter "></i></a>
+                                    <a href="https://www.facebook.com/razvan.boro.7" target="_blank "><i class="bi bi-facebook "></i></a>
+                                    <a href="https://www.instagram.com/razvanboro/" target="_blank "><i class="bi bi-instagram "></i></a>
+                                    <a href="https://www.linkedin.com/in/borodi-razvan-53792b213/." target="_blank "><i class="bi bi-linkedin "></i></a>
                                 </div>
                             </div>
                             <div class="member-info ">
-                                <h4>Apopi Mihai</h4>
-                                <span>Front-end developer</span>
+                                <h4>Borodi Răzvan</h4>
+                                <span>Web Designer</span>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
-            </div>
         </section>
         <!-- End Team Section -->
 
         <!-- ======= Contact Section ======= -->
-        <section id="contact" class="contact">
+        <section id="contact " class="contact ">
             <div class="container " data-aos="fade-up ">
 
                 <div class="section-title ">
@@ -436,7 +449,7 @@
 
                     <div class="col-lg-8 mt-5 mt-lg-0 ">
 
-                        <form action="https://formspree.io/f/xpzkpwqe" method="POST" role="form " class="php-email-form ">
+                        <form action="https://formspree.io/f/xpzkpwqe " method="POST " role="form " class="php-email-form ">
                             <div class="row ">
                                 <div class="col-md-6 form-group ">
                                     <input type="text " name="name " class="form-control " id="name " placeholder="Numele dumneavoastră " required>
@@ -456,7 +469,7 @@
                                 <div class="error-message "></div>
                                 <div class="sent-message ">Mesajul tău a fost trimis. Mulțumim!</div>
                             </div>
-                            <div class="text-center "><button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Trimitere mesaj</button></div>
+                            <div class="text-center "><button class="btn btn-primary btn-xl text-uppercase " id="sendMessageButton " type="submit ">Trimitere mesaj</button></div>
 
                         </form>
 
@@ -471,20 +484,20 @@
     </main>
     <!-- End #main -->
     <!--Footer-->
-    <footer style="background-color: rgb(29, 29, 29); padding-top: 15px; text-align: center;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4"><span class="copyright">Copyright&nbsp;© Jmekerie 2021</span></div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li class="list-inline-item"><a href="https://www.instagram.com/jmekerie.tech/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.facebook.com/jmekerie.tech/?notif_id=1614598071900012&notif_t=page_fan&ref=notif" target="_blank"><i class="fa fa-facebook"></i></a></li>
+    <footer style="background-color: rgb(29, 29, 29); padding-top: 15px; text-align: center; ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-md-4 "><span class="copyright ">Copyright&nbsp;© Jmekerie 2021</span></div>
+                <div class="col-md-4 ">
+                    <ul class="list-inline social-buttons ">
+                        <li class="list-inline-item "><a href="https://www.instagram.com/jmekerie.tech/ " target="_blank "><i class="fa fa-instagram "></i></a></li>
+                        <li class="list-inline-item "><a href="https://www.facebook.com/jmekerie.tech/?notif_id=1614598071900012&notif_t=page_fan&ref=notif " target="_blank "><i class="fa fa-facebook "></i></a></li>
                     </ul>
                 </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
+                <div class="col-md-4 ">
+                    <ul class="list-inline quicklinks ">
 
-                        <li class="list-inline-item"><a href="" target="_blank">Made by jmekerie.tech team</a></li>
+                        <li class="list-inline-item "><a href=" " target="_blank ">Made by jmekerie.tech team</a></li>
                     </ul>
                 </div>
             </div>
